--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ph-health-care-starter",
+  "name": "skill-swap-backend",
   "version": "1.0.0",
   "main": "server.js",
   "author": "shafayat",
@@ -8,7 +8,8 @@
     "schema": "./prisma/schema"
   },
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@prisma/client": "^6.16.3",
