--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.16.3",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
+    "cookie": "^1.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.19",
@@ -31,6 +32,7 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
