--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
   },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node ./dist/server.js",
+    "db:generate": "prisma generate --schema=./prisma/schema",
+    "db:migrate": "prisma migrate --schema=./prisma/schema",
+    "db:push": "prisma db push --schema=./prisma/schema",
+    "db:pull": "prisma db pull --schema=./prisma/schema",
+    "db:studio": "prisma studio --schema=./prisma/schema",
+    "postinstall": "prisma generate --schema=./prisma/schema",
+    "stripe:webhook": "stripe listen --forward-to localhost:5000/webhook"
   },
   "dependencies": {
     "@prisma/client": "^6.16.3",
@@ -40,6 +48,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.5.0",
     "@types/socket.io": "^3.0.1",
+    "@types/stripe": "^8.0.416",
     "prisma": "^6.16.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
